[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "netease-music-analysis"
version = "0.9.0"
description = "网易云音乐评论分析 CLI 工具"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.0",
    "requests>=2.28.0",
    "SQLAlchemy>=2.0.0",
    "pycryptodome>=3.15.0",
    "jieba>=0.42.0",
    "snownlp>=0.12.3",
    "pandas>=1.5.0",
]

[project.scripts]
ncm-analysis = "analysis_cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis_cli*", "netease_analysis*", "netease_cloud_music*"]
